tests/NormalTests/paczka1/small_fuzzy/80802047.err
Error in line 1: yLNR9HDR S823 76,20
Error in line 6: iJc0ZU A521 16,8
